Adds demo and code clean up.